[NEW PAGE] Signup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <h1>New perspective to see the world</h1>
       <p>에바를 통해 만나는 새로운 세상, 놀라운 경험을 지금 바로 시작하세요.</p>
     </div>
-    <div class="hero-device">
+    <div class="hero-device animated fadeInUp">
       <a href="javascript:void(0)">
         <div class="device-screen">
           <h4>Watch a video</h4>
