[ENHANCEMENT] Fixed asset path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
       <a href="#">
         <div class="device-screen">
           <h4>Watch a video</h4>
-            <img src="{{ "/images/hero-play-icon.png" | prepend: site.baseurl }}" alt="" class="play-icon">
+            <img src="{{ "images/hero-play-icon.png" | prepend: site.baseurl }}" alt="" class="play-icon">
         </div>
       </a>
     </div>
@@ -26,7 +26,7 @@ layout: default
       <p>에바의 증강현실 기술을 통해 다양한 이미지를 더욱 생동감 넘치는 멀티미디어 컨텐츠로</p>
       <a href="#" class="button" id="view-use-cases">에바 적용사례 보기</a>
     </div>
-    <img src="{{ "/images/use-cases.jpg" | prepend: site.baseurl }}" alt="">
+    <img src="{{ "images/use-cases.jpg" | prepend: site.baseurl }}" alt="">
   </div>
 </section>
 
@@ -37,8 +37,8 @@ layout: default
       <p>에바 어플만 있으면 전 세계 어디서나 다양한 증강현실<br>컨텐츠를 손쉽게 체험할 수 있습니다.</p>
     </div>
     <div class="app-buttons">
-      <a href="javascript:void(0)" class="app-store" target="_blank"><img src="{{ "/images/app-store.png" | prepend: site.baseurl }}" alt=""></a>
-      <a href="javascript:void(0)" class="google-play" target="_blank"><img src="{{ "/images/google-play.png" | prepend: site.baseurl }}" alt=""></a>
+      <a href="javascript:void(0)" class="app-store" target="_blank"><img src="{{ "images/app-store.png" | prepend: site.baseurl }}" alt=""></a>
+      <a href="javascript:void(0)" class="google-play" target="_blank"><img src="{{ "images/google-play.png" | prepend: site.baseurl }}" alt=""></a>
     </div>
   </div>
 </section>
