[BUG FIX] 비밀번호 변경 링크 연결

--- a/dashboard/settings.html
+++ b/dashboard/settings.html
@@ -23,7 +23,7 @@ layout: dashboard-default
         <label for="field-change-password">비밀번호</label>
       </div>
       <div class="form-field">
-        <a href="javascript:void(0)" class="button">변경</a>
+        <a href="{{ "dashboard/password-reset.html" | prepend: site.baseurl }}" class="button">변경</a>
       </div>
     </div>
     <div class="form-group">
