[BREAKING CHANGES] dashboard namespace 제거

--- a/dashboard-package-checkout-result.html
+++ b/dashboard-package-checkout-result.html
@@ -85,6 +85,6 @@ layout: dashboard-default
   <hr>
 
   <div class="form-buttons">
-    <a href="{{ "dashboard/settings.html" | prepend: site.baseurl }}" class="button primary" style="width: 100%">목록</a>
+    <a href="{{ "dashboard-settings.html" | prepend: site.baseurl }}" class="button primary" style="width: 100%">목록</a>
   </div>
 </section>
