[NEW FEATURE] 마이페이지 포인트 내역 페이지네이션

--- a/dashboard-settings.html
+++ b/dashboard-settings.html
@@ -192,6 +192,24 @@ layout: dashboard-default
       </tbody>
     </table>
 
+    <div class="pagination">
+      <ul>
+        <li class="page-first"><a href="javascript:void(0)">처음</a></li>
+        <li class="page-prev"><a href="javascript:void(0)">이전</a></li>
+        <li>
+          <ul>
+            <li><a href="javascript:void(0)">1</a></li>
+            <li><a href="javascript:void(0)" class="active">2</a></li>
+            <li><a href="javascript:void(0)">3</a></li>
+            <li><a href="javascript:void(0)">4</a></li>
+            <li><a href="javascript:void(0)">5</a></li>
+          </ul>
+        </li>
+        <li class="page-next"><a href="javasciprt:void(0)">다음</a></li>
+        <li class="page-last"><a href="javascript:void(0)">마지막</a></li>
+      </ul>
+    </div>
+
     <hr>
 
     <div class="form-buttons">
