[NEW FEATURE] 스튜디오 빌더 위젯 팝업 7종

--- a/builder.html
+++ b/builder.html
@@ -2,148 +2,4 @@
 layout: builder-default
 ---
 
-<main id="main-container">
-  <div class="mask checkboard"></div>
-
-  <div id="aside-nav">
-    <ul class="accordion">
-      <li>
-        <a href="javascript:void(0)" class="js-accordion-trigger">기본</a>
-        <ul class="submenu">
-          <li><a href="javascript:void(0)">Sub Item 1</a></li>
-          <li><a href="javascript:void(0)">Sub Item 2</a></li>
-          <li><a href="javascript:void(0)">Sub Item 3</a></li>
-          <li><a href="javascript:void(0)">Sub Item 4</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:void(0)" class="js-accordion-trigger">미디어</a>
-        <ul class="submenu">
-          <li><a href="javascript:void(0)">Sub Item 1</a></li>
-          <li><a href="javascript:void(0)">Sub Item 2</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:void(0)" class="js-accordion-trigger">소셜</a>
-        <ul class="submenu">
-          <li><a href="javascript:void(0)">Sub Item 1</a></li>
-          <li><a href="javascript:void(0)">Sub Item 2</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:void(0)" class="js-accordion-trigger">사용자</a>
-        <ul class="submenu">
-          <li><a href="javascript:void(0)">Sub Item 1</a></li>
-          <li><a href="javascript:void(0)">Sub Item 2</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  <div id="content">
-    <div class="mobile-device-mockup-wrapper">
-      <div id="work-space" class="work-space">
-
-      </div>
-    </div>
-  </div>
-  <div id="aside">
-    <div class="upload-content-wrapper">
-      <h5 class="upload-content-title">스캔 이미지</h5>
-
-      <hr>
-
-      <div class="upload-scan-image modal">
-        <label class="upload-content-button" for="upload-scan-image">
-          <img src="{{ "images/builder/icon-image.png" | prepend: site.baseurl }}" alt="" width="80px">
-
-          <span><i class="fa fa-plus"></i>&nbsp;&nbsp;사진 업로드</span>
-        </label>
-        <input class="modal-state" id="upload-scan-image" type="checkbox">
-        <div class="modal-window">
-          <div class="modal-inner">
-            <div class="modal-header">
-              <label class="modal-close" for="upload-scan-image"></label>
-              <h4>이미지 업로드</h4>
-            </div>
-            <div class="modal-body">
-              {% include modal/upload-scan-image.html %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="upload-content-wrapper">
-      <h5 class="upload-content-title">슬라이드 이미지</h5>
-
-      <hr>
-
-      <div class="upload-slide-image modal">
-        <label class="upload-content-button" for="upload-slide-image">
-          <img src="{{ "images/builder/icon-image.png" | prepend: site.baseurl }}" alt="" width="80px">
-
-          <span><i class="fa fa-plus"></i>&nbsp;&nbsp;사진 업로드</span>
-        </label>
-        <input class="modal-state" id="upload-slide-image" type="checkbox">
-        <div class="modal-window">
-          <div class="modal-inner">
-            <div class="modal-header">
-              <label class="modal-close" for="upload-slide-image"></label>
-              <h4>이미지 업로드</h4>
-            </div>
-            <div class="modal-body">
-              {% include modal/upload-slide-image.html %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="upload-content-wrapper">
-      <h5 class="upload-content-title">캠페인 동영상</h5>
-
-      <hr>
-
-      <div class="upload-video modal">
-        <label class="upload-content-button" for="upload-video">
-          <img src="{{ "images/builder/icon-image.png" | prepend: site.baseurl }}" alt="" width="80px">
-
-          <span><i class="fa fa-plus"></i>&nbsp;&nbsp;동영상 업로드</span>
-        </label>
-        <input class="modal-state" id="upload-video" type="checkbox">
-        <div class="modal-window">
-          <div class="modal-inner">
-            <div class="modal-header">
-              <label class="modal-close" for="upload-video"></label>
-              <h4>동영상 업로드</h4>
-            </div>
-            <div class="modal-body">
-              {% include modal/upload-video.html %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
-
-<script>
-  $(document).ready(function() {
-    $('.accordion li').first().addClass('is-expanded').find('.submenu').show();
-
-    $('.js-accordion-trigger').bind('click', function(e) {
-      var parent = $(this).parent();
-
-      if (!parent.hasClass('is-expanded')) {
-        var accordion = $(this).closest('.accordion');
-        accordion.find('.is-expanded').toggleClass('is-expanded');
-        accordion.find('.submenu:visible').slideToggle('fast');
-      }
-
-      parent.find('.submenu').slideToggle('fast');
-      parent.toggleClass('is-expanded');
-
-      e.preventDefault();
-    });
-  });
-</script>
+{% include builder-base.html %}
