--- a/admin-app-users.html
+++ b/admin-app-users.html
@@ -38,7 +38,7 @@ layout: admin-default
           <td>서울특별시</td>
           <td>동작구</td>
           <td class="actions">
-            <a href="javascript:void(0)"><i class="fa fa-cog"></i> 관리</a>
+            <a href="{{ "admin-app-user-detail.html" | prepend: site.baseurl }}"><i class="fa fa-cog"></i> 관리</a>
           </td>
         </tr>
       {% endfor %}
