--- a/admin-web-users.html
+++ b/admin-web-users.html
@@ -38,7 +38,7 @@ layout: admin-default
           <td>개인회원</td>
           <td>20</td>
           <td class="actions">
-            <a href="javascript:void(0)"><i class="fa fa-cog"></i> 관리</a>
+            <a href="{{ "admin-web-user-detail.html" | prepend: site.baseurl }}"><i class="fa fa-cog"></i> 관리</a>
             <a href="javascript:void(0)"><i class="fa fa-list-ul"></i> 캠페인목록</a>
           </td>
         </tr>
